// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't conflict with Prettier: message 1`] = `
"No rules that are unnecessary or conflict with Prettier were found.
"
`;

exports[`doesn't conflict with Prettier: success 1`] = `true`;

exports[`lints with the Hardcore config: fixtures/all-00.js 1`] = `
{
  "errorCount": 36,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 15,
      "endColumn": 18,
      "endLine": 1,
      "line": 1,
      "message": "Unable to resolve path to module 'a'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 19,
      "endColumn": 22,
      "endLine": 2,
      "line": 2,
      "message": "Unable to resolve path to module 'b'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 23,
      "endColumn": 26,
      "endLine": 3,
      "line": 3,
      "message": "Unable to resolve path to module 'c'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 20,
      "endColumn": 23,
      "endLine": 4,
      "line": 4,
      "message": "Unable to resolve path to module 'd'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 8,
      "endColumn": 12,
      "endLine": 6,
      "line": 6,
      "message": "Unable to resolve path to module 'hi'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 8,
      "endColumn": 9,
      "endLine": 8,
      "line": 8,
      "message": "Please rename the variable \`e\`. Suggested names are: \`error\`, \`event\`. A more descriptive name will do too.",
      "messageId": "suggestion",
      "nodeType": "Identifier",
      "ruleId": "unicorn/prevent-abbreviations",
      "severity": 2,
    },
    {
      "column": 15,
      "endColumn": 20,
      "endLine": 8,
      "line": 8,
      "message": "Unable to resolve path to module './e'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 20,
      "endColumn": 25,
      "endLine": 10,
      "line": 10,
      "message": "Unable to resolve path to module './f'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 8,
      "endColumn": 2,
      "endLine": 58,
      "line": 12,
      "message": "Unexpected class, use functions not classes.",
      "messageId": "generic",
      "nodeType": "ClassDeclaration",
      "ruleId": "functional/no-classes",
      "severity": 2,
    },
    {
      "column": 8,
      "endColumn": 12,
      "endLine": 20,
      "line": 20,
      "message": "Use \`undefined\` instead of \`null\`.",
      "messageId": "error",
      "nodeType": "Literal",
      "ruleId": "unicorn/no-null",
      "severity": 2,
      "suggestions": [
        {
          "data": {},
          "desc": "Replace \`null\` with \`undefined\`.",
          "fix": {
            "range": [
              233,
              237,
            ],
            "text": "undefined",
          },
          "messageId": "replace",
        },
      ],
    },
    {
      "column": 5,
      "endColumn": 4,
      "endLine": 44,
      "line": 26,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 36,
      "endLine": 27,
      "line": 27,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 36,
      "endLine": 27,
      "line": 27,
      "message": "Expected an assignment or function call and instead saw an expression.",
      "messageId": "unusedExpression",
      "nodeType": "ExpressionStatement",
      "ruleId": "no-unused-expressions",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 19,
      "endLine": 28,
      "line": 28,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 18,
      "endLine": 28,
      "line": 28,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "functional/immutable-data",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 22,
      "endLine": 29,
      "line": 29,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 19,
      "endLine": 32,
      "line": 32,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 19,
      "endLine": 34,
      "line": 34,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 19,
      "endLine": 38,
      "line": 38,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 19,
      "endLine": 40,
      "line": 40,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 27,
      "endLine": 43,
      "line": 43,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 17,
      "endLine": 46,
      "line": 46,
      "message": "Expected 'this' to be used by class async method 'byeAsync'.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 17,
      "endColumn": 4,
      "endLine": 55,
      "line": 46,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 37,
      "endLine": 48,
      "line": 48,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 23,
      "endLine": 50,
      "line": 50,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 18,
      "endColumn": 21,
      "endLine": 50,
      "line": 50,
      "message": "Unable to resolve path to module 'z'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 6,
      "endLine": 54,
      "line": 52,
      "message": "Unexpected loop, use map or reduce instead.",
      "messageId": "generic",
      "nodeType": "ForOfStatement",
      "ruleId": "functional/no-loop-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 6,
      "endLine": 54,
      "line": 52,
      "message": "iterators/generators require regenerator-runtime, which is too heavyweight for this guide to allow them. Separately, loops should be avoided in favor of array iterations.",
      "messageId": "restrictedSyntax",
      "nodeType": "ForOfStatement",
      "ruleId": "no-restricted-syntax",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 20,
      "endLine": 53,
      "line": 53,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 17,
      "endLine": 57,
      "line": 57,
      "message": "Expected 'this' to be used by class private method #privateMethod.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 17,
      "endColumn": 22,
      "endLine": 57,
      "line": 57,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 24,
      "endLine": 60,
      "line": 60,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionDeclaration",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 24,
      "endLine": 60,
      "line": 60,
      "message": "Unexpected dangling '_' in '_function'.",
      "messageId": "unexpectedUnderscore",
      "nodeType": "FunctionDeclaration",
      "ruleId": "no-underscore-dangle",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 19,
      "endLine": 62,
      "line": 62,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionDeclaration",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 17,
      "endColumn": 19,
      "endLine": 62,
      "line": 62,
      "message": "Unexpected empty generator function 'gen'.",
      "messageId": "unexpected",
      "nodeType": "FunctionDeclaration",
      "ruleId": "no-empty-function",
      "severity": 2,
    },
  ],
  "output": "import a from 'a';
import { b } from 'b';
import c, { c1 } from 'c';
import * as d from 'd';

import 'hi';

import e from './e';

export * as f from './f';

export class Example {
  static s = {
    a,
    b,
  };

  m = {};

  #n = null;

  x = 1000;

  y = 100n;

  hi() {
    _function() ?? this.byeAsync();
    this.m &&= {};
    Example.s?.a?.();

    try {
      _function();
    } catch {
      _function();
    }

    try {
      _function();
    } catch {
      _function();
    }

    this.#privateMethod();
  }

  async byeAsync() {
    const f = 1;
    _function(a, b, c, c1, d, e, f);

    await import('z');

    for await (const v of gen()) {
      _function(v);
    }
  }

  #privateMethod() {}
}

function _function() {}

function* gen() {}
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Hardcore config: fixtures/all-01.ts 1`] = `
{
  "errorCount": 23,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 8,
      "endColumn": 9,
      "endLine": 8,
      "line": 8,
      "message": "Please rename the variable \`e\`. Suggested names are: \`error\`, \`event\`. A more descriptive name will do too.",
      "messageId": "suggestion",
      "nodeType": "Identifier",
      "ruleId": "unicorn/prevent-abbreviations",
      "severity": 2,
    },
    {
      "column": 15,
      "endColumn": 20,
      "endLine": 8,
      "line": 8,
      "message": "Missing file extension for "./e"",
      "nodeType": "Literal",
      "ruleId": "import/extensions",
      "severity": 2,
    },
    {
      "column": 8,
      "endColumn": 2,
      "endLine": 34,
      "line": 11,
      "message": "Unexpected class, use functions not classes.",
      "messageId": "generic",
      "nodeType": "ClassDeclaration",
      "ruleId": "functional/no-classes",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 18,
      "endLine": 19,
      "line": 19,
      "message": "Duplicate name 'm'.",
      "messageId": "unexpected",
      "nodeType": "PropertyDefinition",
      "ruleId": "@typescript-eslint/no-dupe-class-members",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 5,
      "endLine": 21,
      "line": 21,
      "message": "Expected 'this' to be used by class method 'hi'.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 4,
      "endLine": 29,
      "line": 21,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 13,
      "endLine": 21,
      "line": 21,
      "message": "Function must return a value.",
      "messageId": "generic",
      "nodeType": "TSTypeAnnotation",
      "ruleId": "functional/no-return-void",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 14,
      "endLine": 22,
      "line": 22,
      "message": "'_function' was used before it was defined.",
      "messageId": "noUseBeforeDefine",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-use-before-define",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 17,
      "endLine": 22,
      "line": 22,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 16,
      "endLine": 25,
      "line": 25,
      "message": "'_function' was used before it was defined.",
      "messageId": "noUseBeforeDefine",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-use-before-define",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 19,
      "endLine": 25,
      "line": 25,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 16,
      "endLine": 27,
      "line": 27,
      "message": "'_function' was used before it was defined.",
      "messageId": "noUseBeforeDefine",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-use-before-define",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 19,
      "endLine": 27,
      "line": 27,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 17,
      "endLine": 31,
      "line": 31,
      "message": "Expected 'this' to be used by class async method 'byeAsync'.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 17,
      "endColumn": 4,
      "endLine": 33,
      "line": 31,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 14,
      "endLine": 32,
      "line": 32,
      "message": "'_function' was used before it was defined.",
      "messageId": "noUseBeforeDefine",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-use-before-define",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 34,
      "endLine": 32,
      "line": 32,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 48,
      "endLine": 36,
      "line": 36,
      "message": "Unexpected dangling '_' in '_function'.",
      "messageId": "unexpectedUnderscore",
      "nodeType": "FunctionDeclaration",
      "ruleId": "no-underscore-dangle",
      "severity": 2,
    },
    {
      "column": 10,
      "endColumn": 19,
      "endLine": 36,
      "line": 36,
      "message": "Function name \`_function\` must match one of the following formats: camelCase, PascalCase",
      "messageId": "doesNotMatchFormat",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/naming-convention",
      "severity": 2,
    },
    {
      "column": 20,
      "endColumn": 38,
      "endLine": 36,
      "line": 36,
      "message": "Unexpected rest parameter. Use a regular parameter of type array instead.",
      "messageId": "restParam",
      "nodeType": "RestElement",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 23,
      "endColumn": 33,
      "endLine": 36,
      "line": 36,
      "message": "'arguments_' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 2,
    },
    {
      "column": 23,
      "endColumn": 33,
      "endLine": 36,
      "line": 36,
      "message": "'arguments_' is defined but never used. Allowed unused args must match /^_/u.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "unused-imports/no-unused-vars",
      "severity": 1,
    },
    {
      "column": 35,
      "endColumn": 38,
      "endLine": 36,
      "line": 36,
      "message": "Unexpected any. Specify a different type.",
      "messageId": "unexpectedAny",
      "nodeType": "TSAnyKeyword",
      "ruleId": "@typescript-eslint/no-explicit-any",
      "severity": 1,
      "suggestions": [
        {
          "desc": "Use \`unknown\` instead, this will force you to explicitly, and safely assert the type is correct.",
          "fix": {
            "range": [
              446,
              449,
            ],
            "text": "unknown",
          },
          "messageId": "suggestUnknown",
        },
        {
          "desc": "Use \`never\` instead, this is useful when instantiating generic type parameters that you don't need to know the type of.",
          "fix": {
            "range": [
              446,
              449,
            ],
            "text": "never",
          },
          "messageId": "suggestNever",
        },
      ],
    },
    {
      "column": 39,
      "endColumn": 45,
      "endLine": 36,
      "line": 36,
      "message": "Function must return a value.",
      "messageId": "generic",
      "nodeType": "TSTypeAnnotation",
      "ruleId": "functional/no-return-void",
      "severity": 2,
    },
  ],
  "output": "import a from 'a';
import { b } from 'b';
import c, { c1 } from 'c';
import * as d from 'd';

import 'hi';

import e from './e';

@d
export class Example {
  static s = {
    a,
    b,
  };

  m: object = {};

  m: object = {};

  hi(): void {
    _function();

    try {
      _function();
    } catch {
      _function();
    }
  }

  async byeAsync(): Promise<void> {
    _function(a, b, c, c1, d, e);
  }
}

function _function(...arguments_: any): void {}
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 2,
}
`;

exports[`lints with the Hardcore config: fixtures/all-02.js 1`] = `
{
  "errorCount": 5,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 14,
      "endLine": 1,
      "line": 1,
      "message": "'unused1' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 5,
      "line": 3,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionDeclaration",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 10,
      "endColumn": 17,
      "endLine": 3,
      "line": 3,
      "message": "'unused2' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 2,
    },
    {
      "column": 9,
      "endColumn": 16,
      "endLine": 4,
      "line": 4,
      "message": "'unused3' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 2,
    },
  ],
  "source": "const unused1 = 0;

function unused2() {
  const unused3 = 'hi';
}
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Hardcore config: fixtures/all-03.ts 1`] = `
{
  "errorCount": 7,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 16,
      "endLine": 1,
      "line": 1,
      "message": "'tsUnused1' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 16,
      "endLine": 1,
      "line": 1,
      "message": "'tsUnused1' is assigned a value but never used. Allowed unused vars must match /^_/u.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "unused-imports/no-unused-vars",
      "severity": 1,
    },
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 7,
      "line": 3,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionDeclaration",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 7,
      "line": 3,
      "message": "Function must return a value.",
      "messageId": "generic",
      "nodeType": "FunctionDeclaration",
      "ruleId": "functional/no-return-void",
      "severity": 2,
    },
    {
      "column": 10,
      "endColumn": 19,
      "endLine": 3,
      "line": 3,
      "message": "'tsUnused2' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 2,
    },
    {
      "column": 10,
      "endColumn": 19,
      "endLine": 3,
      "line": 3,
      "message": "'tsUnused2' is defined but never used. Allowed unused vars must match /^_/u.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "unused-imports/no-unused-vars",
      "severity": 1,
    },
    {
      "column": 12,
      "endColumn": 15,
      "endLine": 4,
      "line": 4,
      "message": "Unexpected any. Specify a different type.",
      "messageId": "unexpectedAny",
      "nodeType": "TSAnyKeyword",
      "ruleId": "@typescript-eslint/no-explicit-any",
      "severity": 1,
      "suggestions": [
        {
          "desc": "Use \`unknown\` instead, this will force you to explicitly, and safely assert the type is correct.",
          "fix": {
            "range": [
              56,
              59,
            ],
            "text": "unknown",
          },
          "messageId": "suggestUnknown",
        },
        {
          "desc": "Use \`never\` instead, this is useful when instantiating generic type parameters that you don't need to know the type of.",
          "fix": {
            "range": [
              56,
              59,
            ],
            "text": "never",
          },
          "messageId": "suggestNever",
        },
      ],
    },
    {
      "column": 9,
      "endColumn": 15,
      "endLine": 5,
      "line": 5,
      "message": "'asCast' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 2,
    },
    {
      "column": 9,
      "endColumn": 15,
      "endLine": 5,
      "line": 5,
      "message": "'asCast' is assigned a value but never used. Allowed unused vars must match /^_/u.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "unused-imports/no-unused-vars",
      "severity": 1,
    },
    {
      "column": 9,
      "endColumn": 25,
      "endLine": 6,
      "line": 6,
      "message": "'angleBracketCast' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 2,
    },
    {
      "column": 9,
      "endColumn": 25,
      "endLine": 6,
      "line": 6,
      "message": "'angleBracketCast' is assigned a value but never used. Allowed unused vars must match /^_/u.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "unused-imports/no-unused-vars",
      "severity": 1,
    },
  ],
  "source": "const tsUnused1 = 0;

function tsUnused2() {
  const x: any = 'hi';
  const asCast = x as string;
  const angleBracketCast = <string>x;
}
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 5,
}
`;

exports[`lints with the Hardcore config: fixtures/all-04.ts 1`] = `
{
  "errorCount": 2,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 21,
      "endColumn": 2,
      "endLine": 3,
      "line": 1,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "ArrowFunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
  ],
  "source": "export const blah = (): Array<string> => {
  return ['1'];
};
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Hardcore config: fixtures/all-05.ts 1`] = `
{
  "errorCount": 1,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 21,
      "endColumn": 23,
      "endLine": 1,
      "line": 1,
      "message": "Forbidden non-null assertion.",
      "messageId": "noNonNull",
      "nodeType": "TSNonNullExpression",
      "ruleId": "@typescript-eslint/no-non-null-assertion",
      "severity": 1,
    },
  ],
  "output": "export const blah = 3!;
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 1,
}
`;

exports[`lints with the Hardcore config: fixtures/all-06.ts 1`] = `
{
  "errorCount": 7,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 42,
      "endColumn": 46,
      "endLine": 1,
      "line": 1,
      "message": "Use \`undefined\` instead of \`null\`.",
      "messageId": "error",
      "nodeType": "Literal",
      "ruleId": "unicorn/no-null",
      "severity": 2,
      "suggestions": [
        {
          "data": {},
          "desc": "Replace \`null\` with \`undefined\`.",
          "fix": {
            "range": [
              41,
              45,
            ],
            "text": "undefined",
          },
          "messageId": "replace",
        },
      ],
    },
    {
      "column": 44,
      "endColumn": 48,
      "endLine": 2,
      "line": 2,
      "message": "Use \`undefined\` instead of \`null\`.",
      "messageId": "error",
      "nodeType": "Literal",
      "ruleId": "unicorn/no-null",
      "severity": 2,
      "suggestions": [
        {
          "data": {},
          "desc": "Replace \`null\` with \`undefined\`.",
          "fix": {
            "range": [
              90,
              94,
            ],
            "text": "undefined",
          },
          "messageId": "replace",
        },
      ],
    },
    {
      "column": 42,
      "endColumn": 46,
      "endLine": 3,
      "line": 3,
      "message": "Use \`undefined\` instead of \`null\`.",
      "messageId": "error",
      "nodeType": "Literal",
      "ruleId": "unicorn/no-null",
      "severity": 2,
      "suggestions": [
        {
          "data": {},
          "desc": "Replace \`null\` with \`undefined\`.",
          "fix": {
            "range": [
              137,
              141,
            ],
            "text": "undefined",
          },
          "messageId": "replace",
        },
      ],
    },
    {
      "column": 42,
      "endColumn": 46,
      "endLine": 4,
      "line": 4,
      "message": "Use \`undefined\` instead of \`null\`.",
      "messageId": "error",
      "nodeType": "Literal",
      "ruleId": "unicorn/no-null",
      "severity": 2,
      "suggestions": [
        {
          "data": {},
          "desc": "Replace \`null\` with \`undefined\`.",
          "fix": {
            "range": [
              184,
              188,
            ],
            "text": "undefined",
          },
          "messageId": "replace",
        },
      ],
    },
    {
      "column": 42,
      "endColumn": 46,
      "endLine": 5,
      "line": 5,
      "message": "Use \`undefined\` instead of \`null\`.",
      "messageId": "error",
      "nodeType": "Literal",
      "ruleId": "unicorn/no-null",
      "severity": 2,
      "suggestions": [
        {
          "data": {},
          "desc": "Replace \`null\` with \`undefined\`.",
          "fix": {
            "range": [
              231,
              235,
            ],
            "text": "undefined",
          },
          "messageId": "replace",
        },
      ],
    },
    {
      "column": 61,
      "endColumn": 65,
      "endLine": 6,
      "line": 6,
      "message": "Use \`undefined\` instead of \`null\`.",
      "messageId": "error",
      "nodeType": "Literal",
      "ruleId": "unicorn/no-null",
      "severity": 2,
      "suggestions": [
        {
          "data": {},
          "desc": "Replace \`null\` with \`undefined\`.",
          "fix": {
            "range": [
              297,
              301,
            ],
            "text": "undefined",
          },
          "messageId": "replace",
        },
      ],
    },
  ],
  "output": "export const numberTest: number | null = null;
export const booleanTest: boolean | null = null;
export const symbolTest: symbol | null = null;
export const objectTest: object | null = null;
export const stringTest: string | null = null;
export const objectShorthandTest: Readonly<object> | null = null;
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Hardcore config: fixtures/all-07.js 1`] = `
{
  "errorCount": 6,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 15,
      "endColumn": 18,
      "endLine": 1,
      "line": 1,
      "message": "Unable to resolve path to module 'b'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 15,
      "endColumn": 18,
      "endLine": 2,
      "line": 2,
      "message": "Unable to resolve path to module 'c'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 15,
      "endColumn": 20,
      "endLine": 4,
      "line": 4,
      "message": "Unable to resolve path to module './d'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 19,
      "endColumn": 22,
      "endLine": 6,
      "line": 6,
      "message": "Unable to resolve path to module 'a'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 19,
      "endColumn": 22,
      "endLine": 7,
      "line": 7,
      "message": "Unable to resolve path to module 'e'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
  ],
  "output": "import b from 'b';
import c from 'c';

import d from './d';

const a = require('a');
const e = require('e');

export default a + b + c + d + e;
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Hardcore config: fixtures/node-00.js 1`] = `
{
  "errorCount": 2,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 11,
      "endLine": 1,
      "line": 1,
      "message": "'data' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 2,
    },
  ],
  "output": "const data = Buffer.alloc(16);
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Hardcore config: fixtures/react-and-react-native-00.js 1`] = `
{
  "errorCount": 21,
  "fatalErrorCount": 0,
  "fixableErrorCount": 1,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 36,
      "line": 1,
      "message": "Filename 'react-and-react-native-00' must match any of the exported and transformed names 'Example', 'example', 'example'.",
      "nodeType": "Program",
      "ruleId": "filenames/match-exported",
      "severity": 2,
    },
    {
      "column": 19,
      "endColumn": 26,
      "endLine": 1,
      "line": 1,
      "message": "Unable to resolve path to module 'react'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 16,
      "endColumn": 2,
      "endLine": 36,
      "line": 3,
      "message": "Unexpected class, use functions not classes.",
      "messageId": "generic",
      "nodeType": "ClassDeclaration",
      "ruleId": "functional/no-classes",
      "severity": 2,
    },
    {
      "column": 25,
      "endColumn": 30,
      "endLine": 4,
      "line": 4,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 32,
      "endLine": 15,
      "line": 15,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 7,
      "endLine": 19,
      "line": 16,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 20,
      "endLine": 22,
      "line": 22,
      "message": "Expected 'this' to be used by class method 'componentDidMount'.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 20,
      "endColumn": 4,
      "endLine": 27,
      "line": 22,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 33,
      "endLine": 23,
      "line": 23,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 33,
      "endLine": 24,
      "line": 24,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 9,
      "endColumn": 23,
      "endLine": 24,
      "line": 24,
      "message": "'XMLHttpRequest' is not defined.",
      "messageId": "undef",
      "nodeType": "Identifier",
      "ruleId": "no-undef",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 39,
      "endLine": 25,
      "line": 25,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 43,
      "endLine": 26,
      "line": 26,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 42,
      "endLine": 26,
      "fix": {
        "range": [
          444,
          481,
        ],
        "text": "[...new SharedArrayBuffer(16)]",
      },
      "line": 26,
      "message": "Prefer the spread operator over \`Array.from(…)\`.",
      "messageId": "array-from",
      "nodeType": "CallExpression",
      "ruleId": "unicorn/prefer-spread",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 24,
      "endLine": 29,
      "line": 29,
      "message": "Expected 'this' to be used by class method 'shouldComponentUpdate'.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 24,
      "endColumn": 29,
      "endLine": 29,
      "line": 29,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 9,
      "endColumn": 4,
      "endLine": 33,
      "line": 31,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 23,
      "endLine": 35,
      "line": 35,
      "message": "Unexpected dangling '_' in '_handleWhatever'.",
      "messageId": "unexpectedUnderscore",
      "nodeType": "MethodDefinition",
      "ruleId": "no-underscore-dangle",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 18,
      "endLine": 35,
      "line": 35,
      "message": "Expected 'this' to be used by class method '_handleWhatever'.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 18,
      "endColumn": 23,
      "endLine": 35,
      "line": 35,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
  ],
  "output": "import React from 'react';

export default class Example extends React.Component {
  static getInitialProps() {}

  state = {
    x: 'x',

    y: 'y',
  };

  props;

  constructor(properties, context) {
    super(properties, context);
    this.state = {
      ...this.state,
      x: properties.x,
    };
  }

  componentDidMount() {
    fetch('http://example.com');
    new XMLHttpRequest().send();
    Uint16Array.from([1, 2, 3, 4, 5]);
    Array.from(new SharedArrayBuffer(16));
  }

  shouldComponentUpdate() {}

  render() {
    return <div>{this.state.x}</div>;
  }

  _handleWhatever() {}
}
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Hardcore config: fixtures/react-and-react-native-01.js 1`] = `
{
  "errorCount": 9,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 14,
      "line": 1,
      "message": "Filename 'react-and-react-native-01' must match any of the exported and transformed names 'Example', 'example', 'example'.",
      "nodeType": "Program",
      "ruleId": "filenames/match-exported",
      "severity": 2,
    },
    {
      "column": 19,
      "endColumn": 26,
      "endLine": 1,
      "line": 1,
      "message": "Unable to resolve path to module 'react'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 16,
      "endColumn": 2,
      "endLine": 14,
      "line": 3,
      "message": "Unexpected class, use functions not classes.",
      "messageId": "generic",
      "nodeType": "ClassDeclaration",
      "ruleId": "functional/no-classes",
      "severity": 2,
    },
    {
      "column": 20,
      "endColumn": 4,
      "endLine": 9,
      "line": 6,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 20,
      "endLine": 7,
      "line": 7,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 19,
      "endLine": 7,
      "line": 7,
      "message": "Unexpected alert.",
      "messageId": "unexpected",
      "nodeType": "CallExpression",
      "ruleId": "no-alert",
      "severity": 1,
    },
    {
      "column": 5,
      "endColumn": 10,
      "endLine": 7,
      "line": 7,
      "message": "'alert' is not defined.",
      "messageId": "undef",
      "nodeType": "Identifier",
      "ruleId": "no-undef",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 23,
      "endLine": 8,
      "line": 8,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 9,
      "endColumn": 4,
      "endLine": 13,
      "line": 11,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
  ],
  "source": "import React from 'react';

export default class Example extends React.Component {
  props = { x: 'x' };

  componentDidMount() {
    alert('uh oh');
    this.setState({});
  }

  render() {
    return <div>{this.props.x}</div>;
  }
}
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 1,
}
`;

exports[`lints with the Hardcore config: fixtures/react-and-react-native-02.js 1`] = `
{
  "errorCount": 13,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 13,
      "line": 1,
      "message": "Filename 'react-and-react-native-02' must match any of the exported and transformed names 'Example', 'example', 'example'.",
      "nodeType": "Program",
      "ruleId": "filenames/match-exported",
      "severity": 2,
    },
    {
      "column": 19,
      "endColumn": 26,
      "endLine": 1,
      "line": 1,
      "message": "Unable to resolve path to module 'react'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 16,
      "endColumn": 2,
      "endLine": 13,
      "line": 3,
      "message": "Unexpected class, use functions not classes.",
      "messageId": "generic",
      "nodeType": "ClassDeclaration",
      "ruleId": "functional/no-classes",
      "severity": 2,
    },
    {
      "column": 25,
      "endColumn": 30,
      "endLine": 4,
      "line": 4,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 21,
      "endLine": 6,
      "line": 6,
      "message": "Expected 'this' to be used by class method 'componentDidUpdate'.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 21,
      "endColumn": 26,
      "endLine": 6,
      "line": 6,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 9,
      "endLine": 8,
      "line": 8,
      "message": "Expected 'this' to be used by class method 'render'.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 9,
      "endColumn": 4,
      "endLine": 10,
      "line": 8,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 9,
      "endColumn": 4,
      "endLine": 10,
      "line": 8,
      "message": "Prefer _.constant over a function returning a literal",
      "nodeType": "FunctionExpression",
      "ruleId": "lodash/prefer-constant",
      "severity": 2,
    },
    {
      "column": 12,
      "endColumn": 16,
      "endLine": 9,
      "line": 9,
      "message": "Use \`undefined\` instead of \`null\`.",
      "messageId": "error",
      "nodeType": "Literal",
      "ruleId": "unicorn/no-null",
      "severity": 2,
      "suggestions": [
        {
          "data": {},
          "desc": "Remove \`null\`.",
          "fix": {
            "range": [
              165,
              169,
            ],
            "text": "",
          },
          "messageId": "remove",
        },
        {
          "data": {},
          "desc": "Replace \`null\` with \`undefined\`.",
          "fix": {
            "range": [
              165,
              169,
            ],
            "text": "undefined",
          },
          "messageId": "replace",
        },
      ],
    },
    {
      "column": 3,
      "endColumn": 20,
      "endLine": 12,
      "line": 12,
      "message": "Expected 'this' to be used by class method 'componentDidMount'.",
      "messageId": "missingThis",
      "nodeType": "FunctionExpression",
      "ruleId": "class-methods-use-this",
      "severity": 2,
    },
    {
      "column": 20,
      "endColumn": 25,
      "endLine": 12,
      "line": 12,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
  ],
  "output": "import React from 'react';

export default class Example extends React.Component {
  static getInitialProps() {}

  componentDidUpdate() {}

  render() {
    return null;
  }

  componentDidMount() {}
}
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Hardcore config: fixtures/react-and-react-native-03.js 1`] = `
{
  "errorCount": 7,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 6,
      "line": 1,
      "message": "Filename 'react-and-react-native-03' must match any of the exported and transformed names 'Example', 'example', 'example'.",
      "nodeType": "Program",
      "ruleId": "filenames/match-exported",
      "severity": 2,
    },
    {
      "column": 8,
      "endColumn": 13,
      "endLine": 1,
      "line": 1,
      "message": "'React' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 2,
    },
    {
      "column": 19,
      "endColumn": 26,
      "endLine": 1,
      "line": 1,
      "message": "Unable to resolve path to module 'react'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 10,
      "endColumn": 14,
      "endLine": 2,
      "line": 2,
      "message": "'View' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 2,
    },
    {
      "column": 22,
      "endColumn": 36,
      "endLine": 2,
      "line": 2,
      "message": "Unable to resolve path to module 'react-native'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 16,
      "endColumn": 2,
      "endLine": 6,
      "line": 4,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionDeclaration",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
  ],
  "source": "import React from 'react';
import { View } from 'react-native';

export default function Example() {
  return <View testID={'test'} />;
}
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Hardcore config: fixtures/react-and-react-native-04.js 1`] = `
{
  "errorCount": 16,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "line": 1,
      "message": "Definition for rule 'functional/no-expression-statement' was not found.",
      "nodeType": null,
      "ruleId": "functional/no-expression-statement",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 16,
      "line": 1,
      "message": "Filename 'react-and-react-native-04' must match any of the exported and transformed names 'Example', 'example', 'example'.",
      "nodeType": "Program",
      "ruleId": "filenames/match-exported",
      "severity": 2,
    },
    {
      "column": 27,
      "endColumn": 34,
      "endLine": 1,
      "line": 1,
      "message": "Unable to resolve path to module 'react'.",
      "nodeType": "Literal",
      "ruleId": "import/no-unresolved",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 10,
      "endLine": 7,
      "line": 5,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 13,
      "endColumn": 4,
      "endLine": 7,
      "line": 5,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "ArrowFunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 36,
      "endLine": 6,
      "line": 6,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 16,
      "endLine": 6,
      "line": 6,
      "message": "Unexpected console statement.",
      "messageId": "unexpected",
      "nodeType": "MemberExpression",
      "ruleId": "no-console",
      "severity": 1,
    },
    {
      "column": 7,
      "endColumn": 36,
      "endLine": 9,
      "line": 9,
      "message": "Use destructured variables over properties.",
      "messageId": "consistentDestructuring",
      "nodeType": "MemberExpression",
      "ruleId": "unicorn/consistent-destructuring",
      "severity": 2,
      "suggestions": [
        {
          "data": {
            "expression": "properties.badConditionalHook",
            "property": "badConditionalHook",
          },
          "desc": "Replace \`properties.badConditionalHook\` with destructured property \`badConditionalHook\`.",
          "fix": {
            "range": [
              109,
              228,
            ],
            "text": ", badConditionalHook } = properties;
  useEffect(() => {
    console.log(dependentVariable);
  }, []);

  if (badConditionalHook",
          },
          "messageId": "consistentDestructuringSuggest",
        },
      ],
    },
    {
      "column": 38,
      "endColumn": 4,
      "endLine": 11,
      "line": 9,
      "message": "Incomplete branch, every branch in a conditional statement must contain a return statement.",
      "messageId": "incompleteBranch",
      "nodeType": "BlockStatement",
      "ruleId": "functional/no-conditional-statements",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 25,
      "endLine": 10,
      "line": 10,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 15,
      "endColumn": 23,
      "endLine": 10,
      "line": 10,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "ArrowFunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 15,
      "endColumn": 23,
      "endLine": 10,
      "line": 10,
      "message": "Prefer _.noop over an empty function",
      "nodeType": "ArrowFunctionExpression",
      "ruleId": "lodash/prefer-noop",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 16,
      "line": 14,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "FunctionDeclaration",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 10,
      "endColumn": 18,
      "endLine": 14,
      "line": 14,
      "message": "'notAHook' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 23,
      "endLine": 15,
      "line": 15,
      "message": "Using expressions to cause side-effects not allowed.",
      "messageId": "generic",
      "nodeType": "ExpressionStatement",
      "ruleId": "functional/no-expression-statements",
      "severity": 2,
    },
    {
      "column": 13,
      "endColumn": 21,
      "endLine": 15,
      "line": 15,
      "message": "Functions must have at least one parameter.",
      "messageId": "paramCountAtLeastOne",
      "nodeType": "ArrowFunctionExpression",
      "ruleId": "functional/functional-parameters",
      "severity": 2,
    },
    {
      "column": 13,
      "endColumn": 21,
      "endLine": 15,
      "line": 15,
      "message": "Prefer _.noop over an empty function",
      "nodeType": "ArrowFunctionExpression",
      "ruleId": "lodash/prefer-noop",
      "severity": 2,
    },
  ],
  "output": "import { useEffect } from 'react';

export default function Example(properties) {
  const { dependentVariable } = properties;
  useEffect(() => {
    console.log(dependentVariable);
  }, []);

  if (properties.badConditionalHook) {
    useEffect(() => {});
  }
}

function notAHook() {
  useEffect(() => {});
}
",
  "suppressedMessages": [],
  "usedDeprecatedRules": [
    {
      "replacedBy": [
        "padding-line-between-statements",
      ],
      "ruleId": "lines-around-directive",
    },
    {
      "replacedBy": [],
      "ruleId": "global-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-buffer-constructor",
    },
    {
      "replacedBy": [],
      "ruleId": "no-new-require",
    },
    {
      "replacedBy": [],
      "ruleId": "no-path-concat",
    },
  ],
  "warningCount": 1,
}
`;
